deps/v8/test/message/fail/modules-cycle6.mjs
// Copyright 2017 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

import "modules-skip-cycle6.mjs";
export * from "modules-cycle6.mjs";
